# Uni-Dock2

./: .gitignore  LICENSE  README.md  context.py  install.sh  main.py  pyproject.toml  pytest.ini  setup.cfg  setup.py  versioneer.py
.github/: CONTRIBUTING.md
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: benchmark.yml  ci_test.yml  ci_tool.yml  conda.yml  docker.yml
conda-recipe/: build.sh  conda_build_config.yaml  condarc  meta.yaml
docker/: Dockerfile.base
examples/constraint_docking/RNA_case/: ligand.sdf  reference.sdf  unidock_configurations.yaml
examples/constraint_docking/automatic_atom_mapping/: CAT-13a.sdf  CAT-13b.sdf  CAT-13d.sdf  CAT-13e.sdf  CAT-13f.sdf  CAT-13g.sdf  CAT-13h.sdf  CAT-13j.sdf  CAT-13m.sdf  CAT-13n.sdf  CAT-13o.sdf  CAT-17a.sdf  CAT-17b.sdf  CAT-17c.sdf  CAT-17e.sdf  CAT-17g.sdf  CAT-17h.sdf  CAT-24.sdf  CAT-4a.sdf  CAT-4c.sdf  CAT-4d.sdf  CAT-4i.sdf  CAT-4j.sdf  CAT-4k.sdf  CAT-4l.sdf  CAT-4m.sdf  CAT-4o.sdf  CAT-4p.sdf  reference.sdf  unidock_configurations.yaml
examples/constraint_docking/manual_atom_mapping/: ligand.sdf  reference.sdf  unidock_configurations.yaml
examples/covalent_docking/1EWL/: unidock_configurations.yaml
examples/free_docking/molecular_docking/: unidock_configurations.yaml
examples/free_docking/virtual_screening/: unidock_configurations.yaml
pubhub/: condarc
pubhub/conda-recipe/: meta.yaml
unidock/: __init__.py  main.py  unidock_configurations.yaml
unidock/unidock_engine/: .gitignore  CMakeLists.txt  NOTICE  README.md  pyproject.toml
unidock/unidock_engine/api/: CMakeLists.txt
unidock/unidock_engine/api/python/: CMakeLists.txt  pipeline.cpp  pipeline.pyi  unidock_engine.cpp
unidock/unidock_engine/data/: atom_types_smiles.py  config_template.yaml  unidock_ff_atom_types.json
unidock/unidock_engine/doc/: CMakeLists.txt  Doxyfile  index.html
unidock/unidock_engine/include/: CMakeLists.txt
unidock/unidock_engine/lib/: CMakeLists.txt
unidock/unidock_engine/lib/catch2/: catch_amalgamated.cpp
unidock/unidock_engine/python/: CMakeLists.txt  unidock_engine.cpp
unidock/unidock_engine/src/: CMakeLists.txt
unidock/unidock_engine/src/cluster/: cluster.h
unidock/unidock_engine/src/constants/: constants.h
unidock/unidock_engine/src/cuda/: bfgs.cuh  bfgs_wrapper.cu  cluster.cu  common.cu  common.cuh  mc.cu  model.cu  mymath_warp.cuh  optimize.cu  task.cu
unidock/unidock_engine/src/format/: json.cpp  json.h  parser_base.h  pybind_parser.cpp  pybind_parser.h  rapidjson_parser.cpp  rapidjson_parser.h
unidock/unidock_engine/src/geometry/: quaternion.h  rotation.h
unidock/unidock_engine/src/model/: model.h
unidock/unidock_engine/src/myutils/: common.h  errors.cpp  errors.h  matrix.h  myio.cpp  myio.h  mymath.h
unidock/unidock_engine/src/optimize/: optimize.h
unidock/unidock_engine/src/score/: score.h  vina.h
unidock/unidock_engine/src/screening/: screening.cpp
unidock/unidock_engine/src/search/: mc.h
unidock/unidock_engine/src/task/: DockTask.cpp
unidock/unidock_engine/test/: CMakeLists.txt
unidock/unidock_engine/test/benchmark/: run_benchmark.py
unidock/unidock_engine/test/component/: CMakeLists.txt  component_test.cpp
unidock/unidock_engine/test/data/dev1/: config.yaml  inactives.json
unidock/unidock_engine/test/data/ff/: top_prm
unidock/unidock_engine/test/unit/: CMakeLists.txt  unit_test.cpp
unidock/unidock_engine/test/unit/cuda/: test_bfgs.cpp
unidock/unidock_engine/test/unit/format/: test_json.cpp
unidock/unidock_engine/test/unit/geometry/: test_quaternion.cpp  test_rotation.cpp
unidock/unidock_engine/test/unit/myutils/: test_math.cpp  test_matrix.cpp
unidock/unidock_engine/test/unit/score/: test_vina.cpp
unidock/unidock_engine/ud2/: CMakeLists.txt  README.md  set_env.sh
unidock/unidock_engine/ud2/doc/: CMakeLists.txt
unidock/unidock_engine/ud2/include/: CMakeLists.txt
unidock/unidock_engine/ud2/src/: CMakeLists.txt
unidock/unidock_engine/ud2/src/cuda/: bfgs_wrapper.cu  cluster.cu  mc.cu  model.cu  task.cu  vina.cu
unidock/unidock_engine/ud2/src/format/: json.cpp
unidock/unidock_engine/ud2/src/myutils/: myio.cpp  myio.h
unidock/unidock_engine/ud2/src/optimize/: bfgs.h
unidock/unidock_engine/ud2/src/score/: gaff2.cpp  gaff2.h
unidock/unidock_engine/ud2/src/search/: bvh.cpp  bvh.h
unidock/unidock_engine/ud2/src/task/: DockTask.h
unidock/unidock_engine/ud2/test/: CMakeLists.txt
unidock/unidock_engine/ud2/test/component/: test_scoring.cpp
unidock/unidock_engine/ud2/test/data/dev1/: actives.json  simple.json
unidock/unidock_engine/ud2/test/data/dev1/result/: ud2_1.json  ud2_2.json
unidock/unidock_engine/ud2/test/unit/: CMakeLists.txt
unidock/unidock_engine/ud2/test/unit/cuda/: test_cu_common.cpp
unidock/unidock_engine/ud2/test/unit/myutils/: test_math.cpp
unidock/unidock_engine/ud2/test/unit/search/: test_mc.cpp
unidock/unidock_processing/: __init__.py  main.py
unidock/unidock_processing/atom_types/: vina_atom_type.py
unidock/unidock_processing/bounding_volume_hierarchy/: complex_bvh_sampler.py  ligand_bvh_builder.py  receptor_bvh_builder.py  utils.py
unidock/unidock_processing/cli/: docking.py  protein_prep.py
unidock/unidock_processing/io/: __init__.py  get_temp_dir_name.py  get_temp_dir_prefix.py  tempfile.py  yaml.py
unidock/unidock_processing/ligand_topology/: atom_type.py  autodock_topology_builder.py  autodock_torsion_tree_generator.py  generic_rotatable_bond.py  ligand_conformation_preprocessor.py  rotatable_bond.py  unidock_root_builder.py  unidock_root_builder_brics.py  unidock_root_builder_new.py  unidock_torsion_tree_builder.py  utils.py
unidock/unidock_processing/torsion_library/: torsion_library_builder.py  torsion_library_driver.py  torsion_library_driver_old.py  torsion_rule_matcher.py  utils.py
unidock/unidock_processing/unidocktools/: protein_topology.py  receptor_topology_preparation.py  supported_protein_residue_name.py  unidock_benchmark_runner.py  unidock_ff_atom_types.py  unidock_ligand_pose_writer.py  unidock_ligand_topology_builder.py  unidock_protocol_runner.py  (+5 more)
(+94 files in other folders)
