[build-system]
requires = [
    "setuptools>=64",
    "setuptools-scm>=8",
    "cmake==3.27",
    # "pybind11",
]
build-backend = "setuptools.build_meta"

[project]
name = "unidock2"
description = "Uni-Dock molecular docking engine"
readme = "README.md"
authors = [
    {name = "DP Uni-Dock Team"}
]
license = {text = "MIT"}
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dynamic = ["version"]

[tool.setuptools_scm]

[project.scripts]
unidock2 = "unidock_processing.main:main"

[tool.setuptools.packages.find]
where = ["unidock"]
include = ["unidock_processing"]

[tool.setuptools.package-data]
unidock_processing = ["*.xml", "*.in"]

[tool.coverage.run]
omit = [
    "*/tests/*",
    ]