[build-system]
requires = [
    "setuptools>=64",
    "setuptools-scm>=8",
]
build-backend = "setuptools.build_meta"

[project]
name = "unidock_processing"
description = "Uni-Dock molecular docking Processor"
readme = "README.md"
authors = [
    {name = "DP Uni-Dock Team"}
]
license = {text = "MIT"}
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dynamic = ["version"]

[tool.setuptools_scm]

[project.scripts]
unidock2 = "unidock_processing.main:main"

[tool.setuptools.packages.find]
where = ["unidock"]
include = ["unidock_processing*"]

[tool.setuptools.package-data]
"*" = ["*.xml", "*.in"]

[tool.coverage.run]
omit = [
    "*/tests/*",
    ]